public/style.css
.spacing1 {
	margin: 0;
	margin-bottom: 1em;
}

.spacing2 {
	margin: 0;
	margin-bottom: 2em;
}

.spacing3 {
	margin: 0;
	margin-bottom: 3em;
}

.spacing4 {
	margin: 0;
	margin-bottom: 4em;
}

.spacing5 {
	margin: 0;
	margin-bottom: 5em;
}

.centered_text {
	text-align: center;
}

.centered_div {
	display: flex;
	justify-content: space-evenly;
}


@keyframes fade_in {
	from {
		opacity: 0;
	}

	to {
		opacity: 1;
	}
}

.fades_in {
	opacity: 0;
	animation-name: fade_in;
	animation-delay: 0.25s;
	animation-duration: 0.25s;
	animation-fill-mode: forwards;
}


body {
	background-color: #272c38;
}

a,
p,
h1,
h2,
h3,
label {
	color: rgb(191, 191, 191);
	margin: 0;

}

a {
	font-family: 'Work Sans', sans-serif;
	font-size: 16pt;
	font-weight: bold;
}

p,
label {
	font-family: 'IBM Plex Sans', sans-serif;
	font-size: 12pt;
	margin-bottom: 0.5em;
}

h1,
h2,
h3 {
	font-family: 'Work Sans', sans-serif;
	font-weight: bold;
	margin-bottom: 0.25em;
}

h1 {
	font-size: 32pt;
}

h2 {
	font-size: 28pt;
}

h3 {
	font-size: 24pt;
}


/* for debugging database queries */

table {
	display: inline-block;
}

th,
td {
	padding: 0.5em;
	border: 1px white solid;
	color: white;
}

/* for debugging database queries */


#site_banner {
	display: inline-block;
	margin: 0 auto;
}


.main {
	box-sizing: border-box;
	display: block;
	width: 75%;
	min-width: 900px;
	position: relative;
	margin: 0 auto;
	padding: 5em 2em;
}


.browse {
	padding: 5em;
}

.browse_options {
	display: inline-block;
	width: 19.5%;
	float: left;
	text-align: left;
	/* border: 1px red dashed; */
}

.filter_group {
	border-radius: 3px;
	color: rgb(var(133, 150, 165);
	font-size: 1.4rem;
	margin-bottom: 8px;
	padding: 5px 10px;
}

.browse_results {
	box-sizing: border-box;
	display: inline-block;
	width: 79.5%;
	padding: 2em;
	border: 1px red dashed;
}

#year {
	width: 30%;
	margin-left: 2em;
}

input {
	cursor: pointer;
}

input[type=radio]:checked+label {
	color: rgb(159, 173, 189);
	font-weight: bold;
	background: rgba(31, 35, 45, 0.8);
}

input[type=radio] {
	visibility: hidden;
}

input[type=submit] {
	margin-left: 2em
}

/* for debugging database queries */

.browse_options input {
	margin: 0;
	margin-bottom: 0.5em;
	margin-right: 0.5em;
}

.browse_options input[type="text"] {
	width: 5em;
	text-align: center;
}

/* for debugging database queries */


.nav {
	height: 5em;
	border-bottom: 1px rgba(255, 255, 255, 0.25) solid;
	padding: 0;
}

.nav_element {
	display: inline-block;
	text-decoration: none;
	margin: 0;
	margin-bottom: 0.5em;
}

.nav_element:hover {
	color: #02aaff;
}

.nav_left {
	position: absolute;
	left: 0;
	bottom: 0;
	margin-left: 2em;
}


.nav_right {
	position: absolute;
	right: 0;
	bottom: 0;
	margin-right: 2em;
}

.nav_link {
	margin-left: 2em;
}


.logo_text {
	display: inline;
	margin: 0;
	font-family: Montserrat, sans-serif;
	font-size: 20pt;
}

.logo_left {
	color: white;
}

.logo_right {
	color: #02aaff;
}


.link_button {
	display: inline-block;
	border: 0.125em white solid;
	border-radius: 1em;
	margin: 0 0.5em;
	padding: 1em 2em;
	text-decoration: none;
	font-weight: bold;
	font-size: 12pt;
	color: white;
}

.link_button:hover {
	background-color: #02aaff;
	border: 0.125em #02aaff solid;
	cursor: pointer;
}

